scrollbar fix

--- a/public/scss/components/new-position/_create-position.scss
+++ b/public/scss/components/new-position/_create-position.scss
@@ -1,7 +1,7 @@
 .app_create_position {
   max-width: 380px;
   width: 100%;
-  padding-bottom: 0.75rem;
+  padding-bottom: 5rem;
   border: 1px solid #f2f2f2;
   background: #f4f6f8;
   max-height: calc(100vh - var(--header-height));
